LIST OF CHANGES FOR NPG-QC PACKAGE

 - Travis CI build: when building dependencies, us the same
   branch as the one the pull request is made to.
 - back to testing with mysql 5.7.13 in travis
 - drop node 0.12 from node travis matrix
 - add perl 5.22-shrplib to travis matrix
 - to reduce uncertainty in ranking close results, increase precision
   used for ranking contamination results

release 62.5
 - a very concise replacement for NPG_QC pages
 - no templates rna_seqc results - we should not try rendering

release 62.4
 - autoqc loader does not try loading a result for which there is
   no coresponding DBIx binding

release 62.3
 - make bam_flagstats check runnable under the qc script
 - remove autoqc loader backwards compatibility with analysis code
   that does not generate related results for the bam_flagstats results
 - Arguments given to the qc script are passed through to the relevant
   qc check object.
 - QC script does not try to infer the location of input files.
 - QC script accepts the rpt_list argument.
 - tag_index attribute of the check object cannot be assigned to undef.
 - added Broad Institute's RNA-SeQC to autoqc QC checks
 - SeqQC - genotype view fixed (escaping)

release 62.1
 - Bug fix in build action for cgi files.

release 62.0
 - Towards composition-based autoqc:
   - npg_qc::autoqc::results::result - Composition-aware,
     id_run, position and path attributes become optional.
   - npg_qc::autoqc::qc_store - Use DBIx syntax for quering on tag_index
     (future compatibility with planned table schema changes), db load
     compositions of size 1 only.
   - npg_qc::autoqc::db_loader - Result classes support composition,
     but most tables have not been converted yet. Do not generate
     composition if no support in the result table.
   - npg_qc::Schema::ResultSet - Enchancement for a search for tables that
     do not yet support compositions: convert undefined values
     for columns under a unique constraint to database defaults.