@@ -7,6 +7,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
  - add perl 5.22-shrplib to travis matrix
  - to reduce uncertainty in ranking close results, increase precision
    used for ranking contamination results
+ - call_gtck_composite_rpt.pl - supply rpt list to genotype check
 
 release 62.5
  - a very concise replacement for NPG_QC pages
